log
Thu, May 15, 2025  5:43:56 PM: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|5
total_score: 0/70
3f0e54c
Thu, May 15, 2025  5:45:57 PM: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
0fefbb4
Thu, May 15, 2025  5:47:17 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ac166d2
Thu, May 15, 2025  5:51:40 PM: 
 sudoku.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
 tests:  2|4
total_score: 15/70
6de5a05
Thu, May 15, 2025  5:52:07 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4e053f2
Thu, May 15, 2025  5:56:38 PM: 
 sudoku.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
7d53ba7
Thu, May 15, 2025  5:59:42 PM: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
7f2fb5e
Thu, May 15, 2025  6:01:10 PM: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|2
total_score: 45/70
7c4f17b
Thu, May 15, 2025  8:56:57 PM: 
 tests:  6|2
total_score: 45/70
248040e
Thu, May 15, 2025  9:00:22 PM: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:119:10: error: unused variable 'y' [-Werror=unused-variable]
   int x, y;
          ^
sudoku.c:119:7: error: unused variable 'x' [-Werror=unused-variable]
   int x, y;
       ^
cc1.exe: all warnings being treated as errors
4e32847
Thu, May 15, 2025  9:00:30 PM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|2
total_score: 45/70
92263b1
Thu, May 15, 2025  9:08:03 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
83b2c1a
Thu, May 15, 2025  9:23:56 PM: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  10|0
total_score: 70/70
0fa1cdb
Thu, May 15, 2025  9:24:09 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
a5ceeeb
Thu, May 15, 2025  9:24:34 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
dde5f10
